--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title Gol
+    title BookStore
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
     link(rel="stylesheet" href="/stylesheets/style.css")
     script(src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous")
