--- a/src/views/users/login.pug
+++ b/src/views/users/login.pug
@@ -1,13 +1,14 @@
 extends ../layout
 
 block content
-
-  form
+  if error
+    h1= error
+  form(method="post" action="/login")
     .form-group
-      label(for='exampleInputEmail1') Email address
-      input#exampleInputEmail1.form-control(type='email', placeholder='Email')
+      label(for='email') Email address
+      input#email.form-control(type='email' name='email' placeholder='Email' value=email)
     .form-group
-      label(for='exampleInputPassword1') Password
-      input#exampleInputPassword1.form-control(type='password', placeholder='Password')
-    button.btn.btn-default(type='submit') Submit
+      label(for='password') Password
+      input#password.form-control(type='password' name='password' placeholder='Password')
+    button.btn.btn-primary(type='submit') Submit
 
