--- a/src/views/books/new.pug
+++ b/src/views/books/new.pug
@@ -1,7 +1,37 @@
 extends ../layout
 
 block content
-  ul
-    li
-      a(href="/books/"+book.id) back
-  include ./_form.pug
+
+  form(method="post" action=('/books'))
+    .form-group
+      label(for='title') Title
+      input#title.form-control(type='text', name='book[title]')
+    .form-group
+      label(for='image_url') Image URL
+      input#image_url.form-control(type='text', name='book[image_url]')
+    .form-group
+      label(for='description') Description
+      textarea#description.form-control(name='book[description]')
+    .form-group
+      label(for='author') author
+      textarea#author.form-control(name='book[author]')    
+    .form-group
+      label(for='genre') genre
+      textarea#genre.form-control(name='book[genre]')
+    div
+      input.btn.btn-success(type="submit", value="Create")
+  //- .form-group
+  //-   label(for='authors') Authors
+  //-   select#authors.form-control(multiple name="book[author_ids]")
+  //-     for author in authors
+  //-       - selected = book.authors.map(author => author.id).includes(author.id)
+  //-       option(value=author.id selected=selected)= author.name
+  //- .form-group
+  //-   label(for='genres') Genres
+  //-   select#genres.form-control(multiple name="book[genre_ids]")
+  //-     for genre in genres
+  //-       - selected = book.genres.map(genre => genre.id).includes(genre.id)
+  //-       option(value=genre.id selected=selected)= genre.name
+  //- a.btn.btn-default(href="/books/"+book.id) cancel
+  //- button.btn.btn-primary(type='submit')= book.id ? 'Update' : 'Create'
+
