--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,27 +3,33 @@ html(lang="en")
   head
     title BookStore
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(href='https://fonts.googleapis.com/css?family=Economica', rel='stylesheet')
     link(rel="stylesheet" href="/stylesheets/style.css")
     script(src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
     script(src="/scripts/app.js")
 
   body
-    
-    nav.navbar.navbar-default
-      .row
-        .col-lg-12
-          a(href="/" title="Home").logo Bookstore 2.0
-          form.navbar-form.navbar-left(action="/search-books", method="get")
-            .form-group
-              input.form-control(type="text", name="search_query", placeholder="Search by Title or Author")
-              button.btn.btn-default(type="submit", value="Submit") Submit           
-          if loggedIn 
-            a(href="/books/new" title="New Book") New Book
-            a(href="/logout" title="Logout") Logout
-          else
-            a(href="/signup" title="Sign Up") Sign Up
-            a(href="/login" title="Login") Login
+    header
+      nav.navbar.navbar-default
+        .row
+          .col-lg-12.flexbox
+            a.navbar-brand.nav-logo-font(href="/" title="Home").logo Bookstore 2.0
+            form#wrap(action='', autocomplete='on')
+              .form-group
+                input#search.form-control(name='', type='text', placeholder="What're we looking for ?")
+                input#search_submit.form-control(value='Rechercher', type='submit')
+
+            //- form.navbar-form.navbar-left(action="/search-books", method="get")
+            //-   .form-group
+            //-     input.form-control(type="text", name="search_query", placeholder="Search by Title or Author")
+            //-     button.btn.btn-default(type="submit", value="Submit") Submit           
+            if loggedIn 
+              a(href="/books/new" title="New Book") New Book
+              a(href="/logout" title="Logout") Logout
+            else
+              a(href="/signup" title="Sign Up") Sign Up
+              a(href="/login" title="Login") Login
 
 .container
   block content
