login and signup modals now work

--- a/src/views/books/index.pug
+++ b/src/views/books/index.pug
@@ -1,10 +1,15 @@
 extends ../layout
 
 block content
-  ol
-    for book in books
-      li
-        a(href="/books/"+book.id)= book.title
-        
-  a.btn.btn-info.pull-right(href="/?page="+(page+1)) Next
-  a.btn.btn-info.pull-left(href="/?page="+(page-1)) Prev
+    ol.content-styling
+      for book in books
+        .media
+          .media-left.media-middle
+            img.media-object.thumbnail(src=book.image_url, alt='...')
+          .media-body
+            h4.media-heading
+              a(href="/books/"+book.id)= book.title
+            p= book.description   
+          
+    a.btn.btn-info.pull-right(href="/?page="+(page+1)) Next
+    a.btn.btn-info.pull-left(href="/?page="+(page-1)) Prev
