--- a/src/views/users/signup.pug
+++ b/src/views/users/signup.pug
@@ -2,18 +2,20 @@ extends ../layout
 
 block content
 
-  form(method='post' action='/signup')
-    .form-group
-      label(for='name') Name
-      input#name.form-control(type='text', name='user[name]', placeholder='name')
-    .form-group
-      label(for='avatar_url') Avatar Url
-      input#avatar_url.form-control(type='text', name='user[avatar_url]', placeholder='avatar_url')
-    .form-group
-      label(for='email') Email address
-      input#email.form-control(type='email', placeholder='email', name='user[email]')
-    .form-group
-      label(for='password') Password
-      input#password.form-control(type='password', placeholder='password', name='user[password]')
-    button.btn.btn-default(type='submit') Submit
+  
+
+  //- form(method='post' action='/signup')
+  //-   .form-group
+  //-     label(for='name') Name
+  //-     input#name.form-control(type='text', name='user[name]', placeholder='name')
+  //-   .form-group
+  //-     label(for='avatar_url') Avatar Url
+  //-     input#avatar_url.form-control(type='text', name='user[avatar_url]', placeholder='avatar_url')
+  //-   .form-group
+  //-     label(for='email') Email address
+  //-     input#email.form-control(type='email', placeholder='email', name='user[email]')
+  //-   .form-group
+  //-     label(for='password') Password
+  //-     input#password.form-control(type='password', placeholder='password', name='user[password]')
+  //-   button.btn.btn-default(type='submit') Submit
 
