--- a/src/views/users/login.pug
+++ b/src/views/users/login.pug
@@ -3,13 +3,15 @@ extends ../layout
 block content
   if error
     h1= error
-  
-  form(method="post" action="/login")
-    .form-group
-      label(for='email') Email address
-      input#email.form-control(type='email' name='email' placeholder='Email' value=email)
-    .form-group
-      label(for='password') Password
-      input#password.form-control(type='password' name='password' placeholder='Password')
-    button.btn.btn-primary(type='submit') Submit
+
+
+    
+  //- form(method="post" action="/login")
+  //-   .form-group
+  //-     label(for='email') Email address
+  //-     input#email.form-control(type='email' name='email' placeholder='Email' value=email)
+  //-   .form-group
+  //-     label(for='password') Password
+  //-     input#password.form-control(type='password' name='password' placeholder='Password')
+  //-   button.btn.btn-primary(type='submit') Submit
 
