--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -2,6 +2,63 @@ body {
   background-image: url('/images/footer_lodyas.png')
 }
 
+/*navbar styling*/
+#logo {
+  padding-right: 100px;
+}
+
+.navbar-styling {
+  font-family: Raleway;
+  margin: 0 auto;
+  padding: 1.5em 1em;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+}
+
+.navbar-styling a {
+  color: #FFF;
+  float: left;
+  text-decoration: none;
+  font: 20px Raleway;
+  margin: 0px 10px;
+  padding: 10px 10px;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+
+/* Border from Y to X  */
+.borderYtoX a:before, .borderYtoX a:after {
+  position: absolute;
+  opacity: 0.5;
+  height: 100%;
+  width: 2px;
+  content: '';
+  background: #FFF;
+  transition: all 0.3s;
+}
+
+.borderYtoX a:before {
+  left: 0px;
+  top: 0px;
+}
+
+.borderYtoX a:after {
+  right: 0px;
+  bottom: 0px;
+}
+
+.borderYtoX a:hover:before, .borderYtoX a:hover:after {
+  opacity: 1;
+  height: 2px;
+  width: 100%;
+}
+
+.teal {
+  background: #009688;
+}
+
 .author-name-display, .genre-name-display {
   display:  inline;
 }
@@ -28,18 +85,15 @@ body {
   height: 60px;
 }
 
-.teal {
-  background: #009688;
-}
 
-.navbar {
+/* .navbar {
   position: fixed;
   width: 100%;
   height: 80px;
   padding: 10px;
   border: 0px transparent;
   box-shadow: 2px 0px 0px 2px #fff;
-}
+} */
 
 #wrap {
   margin: 0px 80px;
@@ -125,4 +179,8 @@ body {
 
 .content-styling {
   margin-top: 100px;
+}
+
+.description-styling {
+  
 }
