--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
     title BookStore
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
     link(href='https://fonts.googleapis.com/css?family=Economica', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
     link(rel="stylesheet" href="/stylesheets/style.css")
     script(src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
@@ -17,7 +18,7 @@ html(lang="en")
         .container
           .row
             .col-lg-12.header-list
-              a#logo.navbar-brand.nav-logo-font(href="/" title="Home").logo Bookstore 2.0
+              a#logo(href="/" title="Home").logo Bookstore 2.0
               form#wrap(action='/search-books', autocomplete='on', method="get")
                 .form-group
                   input#search.form-control(name='search_query', type='text', placeholder="What are we looking for?")
@@ -40,6 +41,9 @@ html(lang="en")
             h4#myModalLabel.modal-title Sign up 
           .modal-body
             form(method="post" action="/signup")
+              .form-group
+                label(for="name") Name 
+                input#name.form-control(type="text" name="user[name]" placeholder="Email")
               .form-group
                 label(for="email") Email address
                 input#email.form-control(type="email" name="user[email]" placeholder="Email")
