--- a/src/views/books/search.pug
+++ b/src/views/books/search.pug
@@ -1,6 +1,53 @@
 extends ../layout
 
 block content
+  .container.content-styling
+  h1 Your Search Results
+    .row
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-12.shelf.hidden-md.hidden-lg
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-12.shelf
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-12.shelf.hidden-md.hidden-lg
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src='http://placehold.it/150x190/e8117f/fff&text=Book%20Title')
+      .col-xs-12.shelf
+  if page > 1
+  a.btn.btn-info.pull-right(href="/search-books?page="+(page+1)) Next
+  a.btn.btn-info.pull-left(href="/search-books?page="+(page-1)) Prev
+  
   for book in books
     h3=book.title
     .row.jumbotron
@@ -8,7 +55,3 @@ block content
         img.media-object.thumbnail(src= book.image_url, alt='...')
       .col-md-8
         p= book.description
-
-  if page > 1
-  a.btn.btn-info.pull-right(href="/search-books?page="+(page+1)) Next
-  a.btn.btn-info.pull-left(href="/search-books?page="+(page-1)) Prev
