6 books now displaying in each shelf row WIP

--- a/src/views/books/index.pug
+++ b/src/views/books/index.pug
@@ -7,12 +7,12 @@ block content
       .col-xs-4.col-md-2
         a.bookshelf(href="/books/"+book.id)
           img.img-responsive.book(src=book.image_url)
-      //- //- .col-xs-4.col-md-2
-      //- //-   a(href='')
-      //- //-     img.img-responsive.book(src=book.image_url)
-      //- .col-xs-4.col-md-2
-      //-   a(href='')
-      //-     img.img-responsive.book(src=book.image_url)
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src=book.image_url)
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src=book.image_url)
       .col-xs-12.shelf.hidden-md.hidden-lg
       //- .col-xs-4.col-md-2
       //-   a(href='')
@@ -33,16 +33,16 @@ block content
       //- .col-xs-4.col-md-2
       //-   a(href='')
       //-     img.img-responsive.book(src=book.image_url)
-      //- .col-xs-12.shelf.hidden-md.hidden-lg
-      //- .col-xs-4.col-md-2
-      //-   a(href='')
-      //-     img.img-responsive.book(src=book.image_url)
-      //- .col-xs-4.col-md-2
-      //-   a(href='')
-      //-     img.img-responsive.book(src=book.image_url)
-      //- .col-xs-4.col-md-2
-      //-   a(href='')
-      //-     img.img-responsive.book(src=book.image_url)
+      .col-xs-12.shelf.hidden-md.hidden-lg
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src=book.image_url)
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src=book.image_url)
+      .col-xs-4.col-md-2
+        a(href='')
+          img.img-responsive.book(src=book.image_url)
       .col-xs-12.shelf
     a.btn.btn-info.pull-right(href="/?page="+(page+1)) Next
     a.btn.btn-info.pull-left(href="/?page="+(page-1)) Prev
