styled search bar

--- a/src/views/books/show.pug
+++ b/src/views/books/show.pug
@@ -4,10 +4,10 @@ block content
   .container.content-styling
     .media
       .media-left.media-top
-        a(href="/books/"+book.id)
+        a(href='#')
           img.media-object.thumbnail(src=book.image_url, alt='...')
       .media-body.well
-        h4.media-heading= book.title
+        h4.media-heading Middle aligned media
         p= book.description
         h4 Authors
         ol
