--- a/src/views/books/search.pug
+++ b/src/views/books/search.pug
@@ -37,6 +37,7 @@ block content
     .col-xs-4.col-md-2
       a(href='')
         img.img-responsive.book(src=book.image_url)
+  for book in books
     .col-xs-4.col-md-2
       a(href='')
         img.img-responsive.book(src=book.image_url)
